# worldcup-2026-simulator

./: .gitignore  AGENTS.md  README.md  build_data.py  deno.json  index.html  pyproject.toml  style.css
.github/workflows/: static.yml
data/: results.json  simulation_data.json
