[project]
name = "wc2026-simulation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.6",
    "polars>=1.41.2",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
]

[dependency-groups]
dev = [
    "deno>=2.8.3",
    "pytest>=9.1.0",
    "ruff>=0.15.17",
    "ty>=0.0.49",
]
